--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -1,22 +1,37 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  html, body {
+body {
     margin: 0;
-    border: 0;
-    padding: 0;
-    background-color: #fff;
-  }
-  
-  main {
-    margin: auto;
-    width: 50%;
-    padding: 20px;
-  }
-  
-  main > h1 {
-    text-align: center;
-    font-size: 3.5em;
-  }
-  
+    overflow: hidden;
+}
+
+.game-area {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    position: relative;
+}
+
+.paddle {
+    width: 10px;
+    height: 60px;
+    background-color: white;
+    position: absolute;
+}
+
+#leftPaddle {
+    left: 20px;
+}
+
+#rightPaddle {
+    right: 20px;
+}
+
+#ball {
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
