Use stylesheet sizes dynamically, better random direction
Uses stylesheet sizes dynamically now instead of hardcoding them.

Instead of moving perfectly diagonally, the ball now picks a random direction in the middle third arc of the 1st and 4th quadrant, always aiming for the right paddle first.

Added significantly more comments.

--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -18,11 +18,11 @@ body {
 }
 
 #leftPaddle {
-    left: 20px;
+    left: 20px; /*Offset from screen's left border*/
 }
 
 #rightPaddle {
-    right: 20px;
+    right: 20px; /*Offset from screen's right border*/
 }
 
 #ball {
@@ -32,6 +32,6 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); /* Ensure the balls center is where its coordinates are recognized*/
     border-radius: 50%;
 }
